--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+        <link rel="icon" type="image/svg+xml" href="./vite.svg" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>DDK Review</title>
-      <script type="module" crossorigin src="/assets/index.9627dd28.js"></script>
-      <link rel="stylesheet" href="/assets/index.5ba1de70.css">
+      <script type="module" crossorigin src="./assets/index.9627dd28.js"></script>
+      <link rel="stylesheet" href="./assets/index.5ba1de70.css">
     </head>
     <body>
         <div id="app"></div>
